--- a/styles/main.css
+++ b/styles/main.css
@@ -1,25 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap');
 
 :root {
     --color-background: #F0F0F7;
+    --color-primary-lighter: #9871F5;
+    --color-primary-light: #916BEA;
     --color-primary: #8257E5;
     --color-primary-dark: #774DD6;
-    --color-primary-darker: #6842C2;
-    --color-primary-lighter: #9871f5;
-    --color-primary-light: #916BEA;
-    --color-secondary: #04d361;
+    --color-primary-darker: #6842c2;
+    --color-secondary: #04D361;
     --color-secondary-dark: #04BF58;
-    --color-title-in-primary: #ffffff;
+    --color-title-in-primary: #FFFFFF;
     --color-text-in-primary: #D4C2FF;
     --color-text-title: #32264D;
-    --color-text-complement: #9c98a6;
-    --color-text-base: #6a6180;
+    --color-text-complement: #9C98A6;
+    --color-text-base: #6A6180;
     --color-line-in-white: #E6E6F0;
     --color-input-background: #F8F8FC;
+    --color-button-text: #FFFFFF;
+    --color-box-base: #FFFFFF;
     --color-box-footer: #FAFAFC;
     --color-small-info: #C1BCCC;
-    font-size: 60%; /* Controle das medidas rem */
-
+    font-size: 60%; /* controle das medidas rem */
 }
 
 * {
