--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -1,4 +1,5 @@
 
+
 #page-landing {
     background-color:  var(--color-primary);
 }
@@ -16,6 +17,7 @@
 }
 
 .logo-container h2 {
+    font-family: 'Poppins', sans-serif;
     font-weight: 500;
     font-size: 3.6rem;
     line-height: 4.6rem;
