--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -2,46 +2,6 @@
     width: 100vw;
     height: 100vh;
 }
-.page-header {
-    background-color: var(--color-primary);
-
-    display: flex;
-    flex-direction: column;
-}
-
-.page-header .top-bar-container {
-    width: 90%;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    padding: 1.6rem 0;
-}
-.page-header .top-bar-container a {
-    height: 3.2rem;
-    transition: opacity 0.2s;
-
-}
-.page-header .top-bar-container a:hover {
-    opacity: 0.6;
-}
-.page-header .top-bar-container img {
-    height: 1.6rem;
-}
-
-.page-header .header-content {
-    width: 90%;
-    margin: 3.2rem auto;
-
-    position: relative;
-}
-
-.page-header .header-content strong {
-    font: 700 3.6rem Archivo;
-    line-height: 4.2rem;
-    color: var(--color-title-in-primary);
-}
 
 #search-teachers {
     margin-top: 3.2rem;
@@ -69,46 +29,11 @@
     justify-content: center;
     
     transition: background 0.2s;
-    margin-top: 3.2rem;
+    margin-top: 2.5rem;
 }
 
 #search-teachers button:hover {
     background-color: var(--color-secondary-dark);
-}
-
-.select-block label,
-input-block label {
-    font-size: 1.4rem;
-    color: var(--color-text-complement);
-}
-
-.input-block input,
-.select-block select {
-    width: 100%;
-    height: 5.6rem;
-    margin-top: 0.8rem;
-    border-radius: 0.8rem;
-    background: var(--color-input-background);
-    border: 1px solid var(--color-line-in-white);
-    outline: 0;
-    padding: 0 1.6rem;
-    font: 1.6rem Archivo;
-}
-
-.input-block {
-    position: relative;
-}
-
-.input-block:focus-within::after {
-    content: "";
-
-    width: calc(100% - 3.2rem);
-    height: 2px;
-    background: var(--color-primary-light);
-
-    position: absolute;
-    left: 1.6rem;
-    bottom: 0;
 }
 
 
@@ -121,6 +46,11 @@ input-block label {
     background-color: var(--color-box-base);
     border: 1px solid var(--color-line-in-white);
     border-radius: 2.4rem;
+    margin-bottom: 24px;
+}
+
+.teacher-item:first-child {
+    margin-top: 57px;
 }
 
 .teacher-item header{
@@ -214,7 +144,7 @@ input-block label {
     }
 
     .page-header .top-bar-container {
-        mix-width: 1100px;
+        max-width: 1100px;
     }
 
     .page-header .header-content {
