--- a/public/styles/partials/page-landing.css
+++ b/public/styles/partials/page-landing.css
@@ -87,9 +87,12 @@
     margin-left: 0.8rem;
 }
 
-@media (max-width: 699px ) {
+@media (max-width: 1100px ) {
     :root {
         font-size: 40%; /* Modificar as medidas rem */
+    }
+    .hero-image {
+        height: 45rem;
     }
 }
 
