--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -34,7 +34,7 @@
         </header>
 
         <main>
-            <form action="/save-classes" id="create-class" method="POST"> <!-- aqui o Maik digitou save errado -->
+            <form action="/save-classes" id="create-class" method="POST"> 
                 <fieldset>
                     <legend>Seus dados</legend>
 
